# hapsvision

./: README.md  index.html
NimBLE_GATT_Server/: partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
NimBLE_GATT_Server/main/: CMakeLists.txt  idf_component.yml  main.c  model_wrapper.cpp  model_wrapper.h  tap_idle.espdl
train_gestures/: artifact_verify.py  inspect_windows.py  prepare_and_train.py  quantize_tap_idle_onxx.py  script.py  serial_to_csv.py  train_tap_idle_torch.py
train_gestures/artifacts/: meta.json  tap_idle_dataset.npz  tap_idle_mlp.joblib  tap_idle_scaler.joblib
train_gestures/artifacts/run_20260419_003650/: scaler_stats.npz  tap_idle.info  tap_idle.json  tap_idle.onnx  tap_idle.onnx.data  tap_idle_torch_state_dict.pt
train_gestures/artifacts/run_20260419_014037/: meta.json  tap_idle.info  tap_idle.json  tap_idle.onnx  tap_idle_torch_state_dict.pt
train_gestures/data/idle/: idle_20260418_235929.csv  idle_20260419_000004.csv  idle_20260419_000017.csv  idle_20260419_000038.csv  idle_20260419_000114.csv  idle_20260419_000136.csv  idle_20260419_000155.csv  idle_20260419_000216.csv  idle_20260419_000231.csv  idle_20260419_000252.csv  idle_20260419_000306.csv  idle_20260419_000350.csv  idle_20260419_000410.csv  idle_20260419_000432.csv  idle_20260419_000446.csv
train_gestures/data/tap/: tap_20260418_234837.csv  tap_20260418_234944.csv  tap_20260418_235024.csv  tap_20260418_235057.csv  tap_20260418_235115.csv  tap_20260418_235154.csv  tap_20260418_235208.csv  tap_20260418_235222.csv  tap_20260418_235239.csv  tap_20260418_235320.csv  (+5 more)
